# calendar-filter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main-old.rs  main.rs
src/api/: canvas.rs
src/cli/: course.rs  mod.rs  setup.rs  sync.rs
src/cli/calendar/: filter.rs  ls.rs  mod.rs  publish.rs
src/utils/: args.rs  canvas.rs  config.rs  mod.rs
