[package]
name = "canvas-calender-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
