[package]
name = "canvas_calender_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ureq = { version = "3.0.4", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
